fixed third paragraph links not working

--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
-  <title>Tribute Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Lora:400,700,700i|Montserrat:200,300,400,800" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js"></script>
-
+    <meta charset="UTF-8">
+    <title>Tribute Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,700i|Montserrat:200,300,400,800" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
   <!-- Main -->
-<main class="container">
+  <main class="container">
     <!-- Header -->
     <header class="header">
         <div class="titles">
@@ -49,7 +45,7 @@
         </figure>
 
         <h2 class="story-header">After Initial Success</h2>
-        <p class="story-text">Tarantino directed the fourth segment of the anthology film <a href="http://www.imdb.com/title/tt0113101/" target_blank>Four Rooms</a>, &ldquo;The Man from Hollywood&rdquo;, a tribute to the Alfred Hitchcock Presents episode &ldquo;Man From the South&rdquo;, which starred Steve McQueen in an adaptation of a Roald Dahl story. Additionally, he starred in the action comedy Destiny Turns on the Radio as the titular character and played the &ldquo;Pick-up Guy&rdquo; in Robert Rodriguez&rsquo;s action film Desperado in 1995. Tarantino&rsquo;s third feature film was <a href="http://www.imdb.com/title/tt0119396/" target_blank></a>Jackie Brown (1997), an adaptation of Elmore Leonard&rsquo;s novel Rum Punch. A homage to blaxploitation films, it starred Pam Grier, who starred in many of the films of that genre in the 1970s. It received positive reviews and was called a &ldquo;comeback&rdquo; for Grier and costar Robert Forster.</p>
+        <p class="story-text">Tarantino directed the fourth segment of the anthology film <a href="http://www.imdb.com/title/tt0113101/" target="_blank">Four Rooms</a>, &ldquo;The Man from Hollywood&rdquo;, a tribute to the Alfred Hitchcock Presents episode &ldquo;Man From the South&rdquo;, which starred Steve McQueen in an adaptation of a Roald Dahl story. Additionally, he starred in the action comedy Destiny Turns on the Radio as the titular character and played the &ldquo;Pick-up Guy&rdquo; in Robert Rodriguez&rsquo;s action film Desperado in 1995. Tarantino&rsquo;s third feature film was <a href="http://www.imdb.com/title/tt0119396/" target="_blank">Jackie Brown</a> (1997), an adaptation of Elmore Leonard&rsquo;s novel Rum Punch. A homage to blaxploitation films, it starred Pam Grier, who starred in many of the films of that genre in the 1970s. It received positive reviews and was called a &ldquo;comeback&rdquo; for Grier and costar Robert Forster.</p>
 
         <!-- Quote -->
         <blockquote class="quote-text" cite="https://en.wikiquote.org/wiki/Quentin_Tarantino">&ldquo;I write movies about mavericks, about people who break rules, and I don't like movies about people who are pulverised for being mavericks.&rdquo;</blockquote>
@@ -79,15 +75,8 @@
         <p class="footnote">*content extracted from Wikipedia and related resources</p>
     </footer><!-- End of Footer -->
 </main><!-- End of Main -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-
-  
-
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script  src="js/index.js"></script>
-
-
-
-
 </body>
 
 </html>
