--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Figure -->
         <figure class="figure">
-            <img class="figure-img" src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Quentin_Tarantino_C%C3%A9sars_2014_4.jpg" alt="Quentin Tarantino at César festival">
+            <img class="figure-img" src="img/Quentin_Tarantino_Césars_2014_4.jpg" alt="Quentin Tarantino at César festival">
             <figcaption class="figure-caption">- Quentin Tarantino at César festival</figcaption>
         </figure>
 
