--- a/index.html
+++ b/index.html
@@ -13,70 +13,71 @@
 </head>
 
 <body>
-  <!-- Header -->
-    <header class="header">
-        <div class="titles">
-            <div class="inicials-square">
-                <span class="inicials-letters">QT</span>
+    <div class="container">
+        <!-- Header -->
+        <header class="header">
+            <div class="titles">
+                <div class="inicials-square">
+                    <span class="inicials-letters">QT</span>
+                </div>
+                <h1 class="header-title--primary">Quentin<br> Tarantino</h1>
+                <h1 class="header-title--secondary">an American Film Director,<br> Writer and Actor</h1>
             </div>
-            <h1 class="header-title--primary">Quentin<br> Tarantino</h1>
-            <h1 class="header-title--secondary">an American Film Director,<br> Writer and Actor</h1>
-        </div>
-    </header><!-- End of Header -->
+        </header><!-- End of Header -->
 
-  <!-- Main -->
-  <main class="container">
-    <!-- Story -->
-    <section class="story">
-        <h2 class="story-header">Early Life</h2>
-        <p class="story-text">Tarantino was born on March 27, 1963, in Knoxville, Tennessee, the son of Connie McHugh and Tony Tarantino. His father is of Italian descent, and his mother has Cherokee and Irish ancestry. Quentin was named after Quint Asper, Burt Reynolds&rsquo; character
+        <!-- Main -->
+        <main>
+            <!-- Story -->
+            <section class="story">
+                <h2 class="story-header">Early Life</h2>
+                <p class="story-text">Tarantino was born on March 27, 1963, in Knoxville, Tennessee, the son of Connie McHugh and Tony Tarantino. His father is of Italian descent, and his mother has Cherokee and Irish ancestry. Quentin was named after Quint Asper, Burt Reynolds&rsquo; character
             in the CBS series Gunsmoke. Tarantino and his mother moved to Los Angeles where they lived in the South Bay, in the southern part of the city. At 14 years old, Tarantino wrote one of his earliest works, a screenplay called Captain Peachfuzz
             and the Anchovy Bandit, where a thief steals pizzas from a pizzeria. It was based on Hal Needham&rsquo;s 1977 film Smokey and the Bandit, starring Burt Reynolds.</p>
 
-        <h2 class="story-header">Career Beginnings</h2>
-        <p class="story-text">His career began in the late 1980s, when he wrote and directed My Best Friend&rsquo;s Birthday, the screenplay of which formed the basis for True Romance. Tarantino received his first paid writing assignment in the early 1990s when Robert Kurtzman hired
+                <h2 class="story-header">Career Beginnings</h2>
+                <p class="story-text">His career began in the late 1980s, when he wrote and directed My Best Friend&rsquo;s Birthday, the screenplay of which formed the basis for True Romance. Tarantino received his first paid writing assignment in the early 1990s when Robert Kurtzman hired
             him to write the script for From Dusk Till Dawn. He began his career as an independent filmmaker with the release of <a href="http://www.imdb.com/title/tt0105236/" target="_blank">Reservoir Dogs</a> in 1992, which was coined the &ldquo;Greatest Independent Film of All Time&rdquo; by Empire. Its popularity was boosted by his second film, <a href="http://www.imdb.com/title/tt0110912/" target="_blank">Pulp Fiction</a> (1994), a black comedy crime film that was a major success both among critics and audiences.</p>
 
-        <!-- Figure -->
-        <figure class="figure">
-            <img class="figure-img" src="img/Quentin_Tarantino_Césars_2014_4.jpg" alt="Quentin Tarantino at César festival">
-            <figcaption class="figure-caption">- Quentin Tarantino at César festival</figcaption>
-        </figure>
+                <!-- Figure -->
+                <figure class="figure">
+                    <img class="figure-img" src="img/Quentin_Tarantino_Césars_2014_4.jpg" alt="Quentin Tarantino at César festival">
+                    <figcaption class="figure-caption">- Quentin Tarantino at César festival</figcaption>
+                </figure>
 
-        <h2 class="story-header">After Initial Success</h2>
-        <p class="story-text">Tarantino directed the fourth segment of the anthology film <a href="http://www.imdb.com/title/tt0113101/" target="_blank">Four Rooms</a>, &ldquo;The Man from Hollywood&rdquo;, a tribute to the Alfred Hitchcock Presents episode &ldquo;Man From the South&rdquo;, which starred Steve McQueen in an adaptation of a Roald Dahl story. Additionally, he starred in the action comedy Destiny Turns on the Radio as the titular character and played the &ldquo;Pick-up Guy&rdquo; in Robert Rodriguez&rsquo;s action film Desperado in 1995. Tarantino&rsquo;s third feature film was <a href="http://www.imdb.com/title/tt0119396/" target="_blank">Jackie Brown</a> (1997), an adaptation of Elmore Leonard&rsquo;s novel Rum Punch. A homage to blaxploitation films, it starred Pam Grier, who starred in many of the films of that genre in the 1970s. It received positive reviews and was called a &ldquo;comeback&rdquo; for Grier and costar Robert Forster.</p>
+                <h2 class="story-header">After Initial Success</h2>
+                <p class="story-text">Tarantino directed the fourth segment of the anthology film <a href="http://www.imdb.com/title/tt0113101/" target="_blank">Four Rooms</a>, &ldquo;The Man from Hollywood&rdquo;, a tribute to the Alfred Hitchcock Presents episode &ldquo;Man From the South&rdquo;, which starred Steve McQueen in an adaptation of a Roald Dahl story. Additionally, he starred in the action comedy Destiny Turns on the Radio as the titular character and played the &ldquo;Pick-up Guy&rdquo; in Robert Rodriguez&rsquo;s action film Desperado in 1995. Tarantino&rsquo;s third feature film was <a href="http://www.imdb.com/title/tt0119396/" target="_blank">Jackie Brown</a> (1997), an adaptation of Elmore Leonard&rsquo;s novel Rum Punch. A homage to blaxploitation films, it starred Pam Grier, who starred in many of the films of that genre in the 1970s. It received positive reviews and was called a &ldquo;comeback&rdquo; for Grier and costar Robert Forster.</p>
 
-        <!-- Quote -->
-        <blockquote class="quote-text" cite="https://en.wikiquote.org/wiki/Quentin_Tarantino">&ldquo;I write movies about mavericks, about people who break rules, and I don't like movies about people who are pulverised for being mavericks.&rdquo;</blockquote>
-        <span class="quote-caption">- Virgin.Net interview</span>
+                <!-- Quote -->
+                <blockquote class="quote-text" cite="https://en.wikiquote.org/wiki/Quentin_Tarantino">&ldquo;I write movies about mavericks, about people who break rules, and I don't like movies about people who are pulverised for being mavericks.&rdquo;</blockquote>
+                <span class="quote-caption">- Virgin.Net interview</span>
 
-        <h2 class="story-header">2000s</h2>
-        <p class="story-text">Tarantino had next planned to make <a href="http://www.imdb.com/title/tt0361748/" target="_blank">Inglourious Basterds</a>, as it was provisionally titled, but postponed this to write and direct <a href="http://www.imdb.com/title/tt0266697/" target="_blank">Kill Bill</a>, a highly stylized &ldquo;revenge flick&rdquo;. It was originally set for a single theatrical release, but its 4-hour plus running time prompted Tarantino to divide it into two movies. Volume 1 was released in late 2003 and Volume 2 was released in 2004. It was based on a character called The Bride and a plot that he and Kill Bill&rsquo;s lead actress Uma Thurman had developed during the making of Pulp Fiction. Tarantino&rsquo;s next film project was <a href="http://www.imdb.com/title/tt0462322/" target="_blank">Grindhouse</a>, which he co-directed with Rodriguez. Released in theaters on April 6, 2007, Tarantino&rsquo;s contribution to the Grindhouse project was titled Death Proof.</p>
+                <h2 class="story-header">2000s</h2>
+                <p class="story-text">Tarantino had next planned to make <a href="http://www.imdb.com/title/tt0361748/" target="_blank">Inglourious Basterds</a>, as it was provisionally titled, but postponed this to write and direct <a href="http://www.imdb.com/title/tt0266697/" target="_blank">Kill Bill</a>, a highly stylized &ldquo;revenge flick&rdquo;. It was originally set for a single theatrical release, but its 4-hour plus running time prompted Tarantino to divide it into two movies. Volume 1 was released in late 2003 and Volume 2 was released in 2004. It was based on a character called The Bride and a plot that he and Kill Bill&rsquo;s lead actress Uma Thurman had developed during the making of Pulp Fiction. Tarantino&rsquo;s next film project was <a href="http://www.imdb.com/title/tt0462322/" target="_blank">Grindhouse</a>, which he co-directed with Rodriguez. Released in theaters on April 6, 2007, Tarantino&rsquo;s contribution to the Grindhouse project was titled Death Proof.</p>
 
-        <h2 class="story-header">Recent Work</h2>
-        <p class="story-text">Tarantino's film Inglourious Basterds, released in 2009, is the story of a group of Jewish-American guerrilla soldiers in Nazi-occupied France during World War II. Filming began in October 2008. The film opened on August 21, 2009 to very positive reviews and reached the No. 1 spot at the box office worldwide. It went on to become Tarantino&rsquo;s highest-grossing film until it was surpassed by <a href="http://www.imdb.com/title/tt1853728/" target="_blank">Django Unchained</a> three years later. In 2011, production began on Django Unchained, a film about the revenge of a former slave in the U.S. South in 1858. The film stemmed from Tarantino&rsquo;s desire to produce a spaghetti western set in America's Deep South. The <a href="http://www.imdb.com/title/tt3460252/" target="_blank">Hateful Eight</a>, his latest project, also a western, was released on December 25, 2015, as a roadshow presentation in 70mm film format theaters, before being released in digital theaters on December 30, 2015.</p>
+                <h2 class="story-header">Recent Work</h2>
+                <p class="story-text">Tarantino's film Inglourious Basterds, released in 2009, is the story of a group of Jewish-American guerrilla soldiers in Nazi-occupied France during World War II. Filming began in October 2008. The film opened on August 21, 2009 to very positive reviews and reached the No. 1 spot at the box office worldwide. It went on to become Tarantino&rsquo;s highest-grossing film until it was surpassed by <a href="http://www.imdb.com/title/tt1853728/" target="_blank">Django Unchained</a> three years later. In 2011, production began on Django Unchained, a film about the revenge of a former slave in the U.S. South in 1858. The film stemmed from Tarantino&rsquo;s desire to produce a spaghetti western set in America's Deep South. The <a href="http://www.imdb.com/title/tt3460252/" target="_blank">Hateful Eight</a>, his latest project, also a western, was released on December 25, 2015, as a roadshow presentation in 70mm film format theaters, before being released in digital theaters on December 30, 2015.</p>
 
-        <p class="story-text"><a href="http://www.imdb.com/name/nm0000233/" target="_blank">Find out more...</a></p>
+                <p class="story-text"><a href="http://www.imdb.com/name/nm0000233/" target="_blank">Find out more...</a></p>
+            </section><!-- End of Story -->
+        </main><!-- End of Main -->
 
-    </section><!-- End of Story -->
-</main><!-- End of Main -->
-
-<!-- Footer -->
-<footer class="footer">
-    <!-- Social -->
-    <div class="social">
-        <a class="social-box instagram" href="https://www.instagram.com/bogdantrosic/" target="_blank"><span class="social-letters">In</span></a>
-        <a class="social-box twitter" href="https://twitter.com/BogdanTrosic" target="_blank"><span class="social-letters">Tw</span></a>
-        <a class="social-box github" href="https://github.com/Xenonien" target="_blank"><span class="social-letters">Gh</span></a>
-        <a class="social-box linkedin" href="https://www.linkedin.com/in/bogdan-trosic-347167139/" target="_blank"><span class="social-letters">Li</span></a>
+        <!-- Footer -->
+        <footer class="footer">
+            <!-- Social -->
+            <div class="social">
+                <a class="social-box instagram" href="https://www.instagram.com/bogdantrosic/" target="_blank"><span class="social-letters">In</span></a>
+                <a class="social-box twitter" href="https://twitter.com/BogdanTrosic" target="_blank"><span class="social-letters">Tw</span></a>
+                <a class="social-box github" href="https://github.com/Xenonien" target="_blank"><span class="social-letters">Gh</span></a>
+                <a class="social-box linkedin" href="https://www.linkedin.com/in/bogdan-trosic-347167139/" target="_blank"><span class="social-letters">Li</span></a>
+            </div>
+            <!-- Footer Text -->
+            <p class="credits">Designed and coded by Bogdan Trosic</p>
+            <p class="footnote">*content extracted from Wikipedia and related resources</p>
+        </footer><!-- End of Footer -->
     </div>
-    <!-- Footer Text -->
-    <p class="credits">Designed and coded by Bogdan Trosic</p>
-    <p class="footnote">*content extracted from Wikipedia and related resources</p>
-</footer><!-- End of Footer -->
 
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<script  src="js/index.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
